--- a/css/index.css
+++ b/css/index.css
@@ -1,31 +1,53 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
-
-
+*{
+    box-sizing: border-box;
+    padding: 0;
+    margin:0;
+    border:1px solid grey;
+}
 body{
     margin: 0 auto;
+    width: 90%;
     width: 800px;
 }
 header nav{
+    margin-top: 3%;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
+    width: 100%;
+}
+header{
+    display: flex;
 }
 a{
     text-decoration: none;
     color: black;
+    font-family: 'Titillium Web';
+}
+p{
+    font-family: 'Titillium Web';
 }
 .iod{
     font-size: 40px;
     padding: 5%;
     text-align: center;
+    font-family: 'Bangers';
+    letter-spacing: 2px;
+}
+h4{
+    font-family: 'Bangers';
+    letter-spacing: 2px;
 }
 .button{
 	display: flex;
 	justify-content: center;
-	width: 160px;
-	height: 55px;
-	margin-bottom: 15%;
+	width: 125px;
+	height: 30px;
+    margin-bottom: 15%;
+    font-family: 'Titillium Web';
+    color: black;
+    font-weight: bold;
 }
 .cover{
     display: flex;
@@ -34,18 +56,20 @@ a{
 .pair{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     margin: 3%;
 }
 .circle img{
     display: flex;
     margin: 3%;
-    margin-top: 20%;
+    margin-top: 15%;
     justify-content: center;
     max-width: 100%;
     height: auto;
+    justify-content: space-around;
 }
+
 p{
     width: 90%;
 }
@@ -55,12 +79,12 @@ p{
     margin: 2%;
     justify-content: space-between;
 }
-/* .top div{
-    justify-content: flex-end;
-} */
 .middle-img{
-    width: 100%;
-    padding: 5% 0;
+    width: 98%;
+    padding: 2% 0;
+    margin: 2%;
+    display: flex;
+    justify-content: center;
 }
 .bottom{
     display: flex;
@@ -68,6 +92,56 @@ p{
     margin: 2%;
     justify-content: space-between;
 }
+.contact{
+    margin: 2%;
+}
 .copyright{
     text-align: center;
+    margin-bottom: 3%;
+}
+
+@media (max-width: 800px){
+    body{
+        width: 100%;
+    }
+    header{
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .circle img{
+        display: none;
+    }
+    .cover{
+        display: flex;
+        justify-content: center;
+    }
+    /* body{
+        width: 500px;
+    } */
+}
+@media (max-width: 500px){
+    body{
+        width: 100%;
+    }
+    header nav{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    header nav a{
+        width: 100%;
+        border-bottom: 1px solid gray;
+        padding: 5px;
+        display: flex;
+        justify-content: center;
+    }
+    .top{
+        display: flex;
+        flex-direction: column;
+    }
+    .bottom{
+        display: flex;
+        flex-direction: column;
+    }
 }
