--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
-*{
+/* *{
     box-sizing: border-box;
     padding: 0;
     margin:0;
     border:1px solid grey;
-}
+} */
 body{
     margin: 0 auto;
     width: 90%;
