--- a/css/index.css
+++ b/css/index.css
@@ -9,15 +9,15 @@ body{
     margin: 0 auto;
     width: 800px;
 }
-header nav{
-    margin-top: 3%;
+header{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
 }
-header{
+header nav{
     display: flex;
+    width: 100%;
+    justify-content: space-around;
 }
 a{
     text-decoration: none;
